--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,5 +14,7 @@
     </div>
   </div>
 
+  <%= link_to "Edit", project_path(@project) %>
+  <%= link_to "Delete", project_path(@project), method: :delete, data: { confirm: "Are you sure?" "} %>
   <hr>
 </div>
