--- a/app/views/contacts/create.html.erb
+++ b/app/views/contacts/create.html.erb
@@ -1,6 +1,7 @@
-<h1 id="page_title">Say Hello! or don't, it's fine.</h1>
+<h1 id="page_title">Thanks!</h1>
 
 <div class="skinny_wrapper wrapper_padding">
 	<h1>Thank you for your message!</h1>
 	<p>I'll get back to you soon.</p>
+	<p>Or not... Either way.</p>
 </div>
