--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
 	<%= yield %>
 
 	<footer id="main_footer">
-		<p class="copyright">&copy;2015 Mackenzie Child</p>
+		<p class="copyright">&copy;2018 D W Y N</p>
 		<nav>
 			<a href="http://twitter.com/dwyn" target="_blank"><i class="fa fa-twitter"></i></a>
 			<a href="http://github.com/dwyn" target="_blank"><i class="fa fa-github"></i></a>
