Playing with a lil CSS

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -112,6 +112,7 @@ hr {
 	nav {
 		float: right;
 		padding-top: 1.5rem;
+		height: 20%;
 		a {
 			color: $dark;
 			text-decoration: none;
@@ -132,6 +133,7 @@ hr {
 #main_footer {
 	padding: 2.5em 5%;
 	border-top: 1px solid $border;
+	height: 20%;
 	.copyright {
 		float: left;
 		font-size: .9em;
