--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,8 +2,10 @@
 	<div class="col-1 about homepage_content">
 		<h2>About</h2>
 		<hr>
-		<p>Hi, I am Dwayne. I am pretty plain.</p>
-		<p>Ennui irony sriracha organic, vaporware craft beer iceland meggings venmo. Bitters biodiesel master cleanse retro, tacos synth yuccie austin franzen you probably haven't heard of them adaptogen.</p>
+		<p> Ya know... I am never quite sure how to talk about myself, so Ill just leave you with two quotes that I feel best describe me:</p>
+		<p>1. Embrace non-linear thinking.</p>
+		<p>.</p>
+		<p>2. In times of change, learners inherit the earth, while the learned find themselves beautifully equipped to deal with a world that no longer exists</p>
 	</div>
 	<div class="col-2 homepage_content">
 		<h2>Stuff I've Written</h2>
